fix mozzila z-index bug

--- a/frontend/src/components/Splash/Splash.css
+++ b/frontend/src/components/Splash/Splash.css
@@ -11,6 +11,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  z-index: 1;
 }
 
 .left-container.centered {
